Created an assets folder with a css folder inside and a css file inside of that. Linked to the file in the html file

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>Password Generator</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   </head>
   <body>
-    <header>
-      <h1>Password Generator</h1>
-    </header>
-    <h2>Generate a Password</h2>
-    <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
-    <button id="generate">Generate Password</button>
-    <button id="copy">Copy to Clipboard</button>
+    <div class="container header">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1>Password Generator</h1>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
