Main container was made with some styling.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   </head>
   <body>
-    <div class="container header">
+    <div class="container">
       <div class="row">
         <div class="col-12 text-center">
           <h1>Password Generator</h1>
+        </div>
+      </div>
+    </div>
+    <div class="container main-content">
+      <div class="row">
+        <div class="col-xs-12 col-6">
+          <h4>Generate a password</h4>
         </div>
       </div>
     </div>
