--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
         </div>
         <hr>
         <div class="buttons">
-          <button type="button" class="generate-button" name="generate">Generate Password</button>
-          <button type="button" class="copy-button" name="copy">Copy to Clipboard</button>
+          <button type="button" class="generate-button" id="generate">Generate Password</button>
+          <button type="button" class="copy-button" id="copy">Copy to Clipboard</button>
         </div>
       </div>
     </div>
+
+    <script type="text/javascript" src="javascript/index.js"></script>
 
   </body>
 </html>
