Added id's to the checkboxs. Added code to get user input and make sure the user is selecting at least one character type

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="length-row">
           Enter a length for your password (8 -128 characters):
         </div>
-        <input type="text" class="length-row" name="length" placeholder="8" id="legnth-input">
+        <input type="text" class="length-row" name="length" placeholder="example: 12" id="legnth-input">
       </div>
       <!-- Character type fields -->
       <div class="character-types">
@@ -33,28 +33,28 @@
         <div class="special-char-row">
           Please select whether you would like special characters or not:
         </div>
-        <input type="checkbox" class="special-char-row" value="special-char" checked>Special characters (@, #, $, %, &, *, +)
+        <input type="checkbox" class="special-char-row" value="special-char" id="special-check" checked>Special characters (@, #, $, %, &, *, +)
       </div>
       <!-- Select Numerical characters or not -->
       <div class="numerical-char">
         <div class="numerical-char-row">
           Please select whether you would like numerical characters or not:
         </div>
-        <input type="checkbox" class="numerical-char-row" value="numerical-char" checked>Numerical characters (1, 2, 3, 4, 5)
+        <input type="checkbox" class="numerical-char-row" value="numerical-char" id="numerical-check" checked>Numerical characters (1, 2, 3, 4, 5)
       </div>
       <!-- Select lowercase or not -->
       <div class="lowercase-char">
         <div class="lowercase-char-row">
           Please select whether you would like lowercase characters or not:
         </div>
-        <input type="checkbox" class="lowercase-char-row" value="lowercase-char" checked>lowercase characters
+        <input type="checkbox" class="lowercase-char-row" value="lowercase-char" id="lowercase-check" checked>lowercase characters
       </div>
       <!-- Select uppercase or not -->
       <div class="uppercase-char">
         <div class="uppercase-char-row">
           Please select whether you would like uppercase characters or not:
         </div>
-        <input type="checkbox" class="uppercase-char-row" value="uppercase-char" checked>uppercase characters
+        <input type="checkbox" class="uppercase-char-row" value="uppercase-char" id="uppercase-check" checked>uppercase characters
       </div>
 
     </div>
