Updated html to tell the user to select at least one character type. Password now prints to the screen

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <!-- Character type fields -->
       <div class="character-types">
-        Character types
+        Character types (select at least one)
       </div>
       <!-- Select special characters or not -->
       <div class="special-char">
@@ -65,7 +65,7 @@
         <h4 class="generator-header">Generate a password</h4>
         <hr>
         <div class="password-area">
-          <p class="password">Your secure password</p>
+          <p class="password" id="password">Your secure password</p>
         </div>
         <hr>
         <div class="buttons">
